# backend/src/controllers/packages_controller.ts
@@ -45,6 +45,7 @@ export function updatePack(
   pack: {
     id: number;
     name: string;
+    procedure_ids: [number];
     price: number;
     amount: number;
   },
@@ -71,6 +72,7 @@ export function updatePack(
 export function createPack(
   pack: {
     name: string;
+    procedure_ids: [number];
     price: number;
     amount: number;
   },
